<resources>
    <item name="visible" type="id"/>
    <item name="masked" type="id"/>
    <string name="app_name">Alarm</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="loading">正在加载…</string>
    <string name="please_enable_the_bluetooth">请打开蓝牙</string>
    <string name="device_not_connected">请先连接设备</string>
    <string name="phone_or_eamil">手机号或者邮箱</string>
    <string name="pwd_hint">密码（6–10数组字母）</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="login">登入</string>
    <string name="register">注册</string>
    <string name="email_register">邮箱注册</string>
    <string name="bind">绑定</string>
    <string name="unbind">解除绑定</string>
    <string name="no_bind_device">未绑定设备</string>
    <string name="device">设备:</string>
    <string name="phone_alarm_switch">手机报警开/关</string>
    <string name="phone_alarm_ring">手机报警铃声</string>
    <string name="phone_alarm_vibration">手机报警震动</string>
    <string name="voltage">电压</string>
    <string name="voltage_num" formatted="false">%s V</string>
    <string name="set_alarm_content">设防时间</string>
    <string name="track">track</string>
    <string name="clock">clock</string>
    <string name="me">me</string>
    <string name="scan">扫描</string>
    <string name="connect_device">连接设备</string>
    <string name="ring_set">铃声选择</string>
    <string name="alarm_set">闹钟设置</string>
    <string name="alarm">闹钟</string>
    <string name="switch_lights">进球灯光</string>
    <string name="alarm_ring">进球声音</string>
    <string name="grade_scale">分数比例</string>
    <string name="scale_one">比例1</string>
    <string name="scale_two">比例2</string>
    <string name="scale_three">比例3</string>
    <string name="log_out">退出登录</string>
    <string name="switch_device">切换设备</string>
    <string name="about_us">关于我们</string>
    <string name="version">版本</string>
    <string name="use_help">使用帮助</string>
    <string name="about">关于</string>
    <string name="account_msg">账号信息</string>
    <string name="user_info">个人信息</string>
    <string name="input_pwd">输入密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="input_new_pwd_again">请再次输入新密码</string>
    <string name="company_name">深圳市葆威道科技有限公司</string>
    <string name="company_web">www.bauway.com</string>
    <string name="company_phone">0755–29089555</string>
    <string name="company_address">广东省深圳市沙井街道南浦路蚝三林坡第一工业区B5栋</string>
    <string name="phone_register">手机号注册</string>
    <string name="email">邮箱</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="verify_code">验证码</string>
    <string name="phone_num">手机号</string>
    <string name="confirm_unbind_device">确认解绑当前设备？</string>
    <string name="searching">正在搜索…</string>
    <string name="search_again">重试</string>
    <string name="phone_err">号码有误</string>
    <string name="code_is_send">验证码发送中…</string>
    <string name="code_is_send_error_plz_try">验证码请求失败，请重试</string>
    <string name="second">秒</string>
    <string name="code_is_send_plz_check">验证码已发送，请注意查收</string>
    <string name="plz_input_email">请输入邮箱</string>
    <string name="plz_input_pwd">请输入密码</string>
    <string name="register_now">正在注册…</string>
    <string name="reset_now">正在重置…</string>
    <string name="email_register_success">注册成功，请注意查收邮件</string>
    <string name="email_already_register">邮箱已被注册</string>
    <string name="phone_already_register">手机号已被注册</string>
    <string name="register_failure">注册失败</string>
    <string name="plz_input_phone_num">请输入手机号</string>
    <string name="plz_input_code">请输入验证码</string>
    <string name="register_success">注册成功</string>
    <string name="user_exist">用户已存在</string>
    <string name="reset_pwd">重置密码</string>
    <string name="plz_input_sure_email_address">请输入正确的邮箱地址</string>
    <string name="phone_no_exist">号码不存在</string>
    <string name="reset_failure">重置失败，请重试</string>
    <string name="reset_email_send">重置邮件已发送，请根据邮件内容操作</string>
    <string name="reset_success">密码重置成功</string>
    <string name="email_reset">邮箱重置</string>
    <string name="phone_reset">手机号重置</string>
    <string name="new_pwd_discord">两次输入的密码不一致</string>
    <string name="modify_now">正在修改…</string>
    <string name="pwd_modify_success">密码修改成功，可以用新密码登录</string>
    <string name="pwd_modify_failure">修改失败，请重试</string>
    <string name="plz_input_account">请输入账号</string>
    <string name="login_failure">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="login_now">正在登录...</string>
    <string name="default_ring">默认</string>
    <string name="ring">铃声</string>
    <string name="feed_back">意见反馈</string>
    <string name="plz_input_feed_back">请输入您的意见</string>
    <string name="submit">提交</string>
    <string name="send_is_now">正在发送...</string>
    <string name="thanks_you_feed_back">感谢您的反馈！</string>
    <string name="fedd_back_send_failure">反馈发送失败</string>
    <string name="plz_check_email">请验证邮箱后再尝试登录</string>
    <string name="calibration">校准</string>
</resources>
