<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/rl1"
        style="@style/top_rl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/top_rl_tv"
            android:text="@string/user_info"
            />
    </RelativeLayout>

    <View
        android:id="@+id/line1"
        style="@style/vertical_line"
        app:layout_constraintTop_toBottomOf="@id/rl1"
        />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/line1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/account_msg"
                android:textColor="@color/white_1"
                />

            <RelativeLayout
                android:id="@+id/bt_user_info"
                style="@style/more_item_rl">

                <ImageView
                    android:id="@+id/iv_user"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/vector_drawable_user_info"
                    />

                <TextView
                    android:id="@+id/tv_user_account"
                    style="@style/more_user_tv"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@id/iv_user"
                    android:text="11111111111"/>

                <ImageView
                    style="@style/more_user_right_iv"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/about"
                android:textColor="@color/white_1"
                />

            <RelativeLayout
                android:id="@+id/bt_use_help"
                style="@style/more_item_rl">

                <TextView
                    style="@style/more_user_tv"
                    android:text="@string/feed_back"
                    />

                <ImageView
                    style="@style/more_user_right_iv"/>
            </RelativeLayout>

            <RelativeLayout
                style="@style/more_item_rl">

                <TextView
                    style="@style/more_user_tv"
                    android:text="@string/version"
                    />

                <TextView
                    android:id="@+id/tv_version_num"
                    style="@style/more_user_tv"
                    android:layout_alignParentEnd="true"
                    android:text="v1.1"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/bt_about_us"
                style="@style/more_item_rl">

                <TextView
                    style="@style/more_user_tv"
                    android:text="@string/about_us"
                    />

                <ImageView
                    style="@style/more_user_right_iv"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/bt_switch_device"
                style="@style/more_item_rl"
                android:layout_marginTop="20dp"
                >

                <TextView
                    style="@style/more_user_tv"
                    android:text="@string/switch_device"
                    />

                <ImageView
                    style="@style/more_user_right_iv"/>
            </RelativeLayout>

            <Button
                android:id="@+id/bt_logout"
                style="@style/bt_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/selector_white_to_gray"
                android:text="@string/log_out"
                android:textColor="@color/black_1"
                />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>