<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/default_bg_style">

    <RelativeLayout
        android:id="@+id/rl1"
        style="@style/top_rl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/bt_return"
            style="@style/top_rl_bt"/>

        <TextView
            style="@style/top_rl_tv"
            android:text="@string/feed_back"
            />
    </RelativeLayout>

    <View
        android:id="@+id/line1"
        style="@style/vertical_line"
        app:layout_constraintTop_toBottomOf="@id/rl1"
        />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/line1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            >

            <EditText
                android:id="@+id/et_feed_back_content"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/white_3"
                android:gravity="top"
                android:hint="@string/plz_input_feed_back"
                android:maxLength="500"
                android:padding="10dp"
                android:textColor="@color/white_1"
                android:textColorHint="@color/white_1"
                />

            <Button
                android:id="@+id/bt_submit"
                style="@style/bt_default"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_white_to_gray"
                android:text="@string/submit"
                android:textColor="@color/black_1"
                />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>