<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/default_bg_style">

    <RelativeLayout
        android:id="@+id/rl1"
        style="@style/top_rl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/bt_return"
            style="@style/top_rl_bt"/>

        <TextView
            style="@style/top_rl_tv"
            android:text="@string/user_info"
            />
    </RelativeLayout>

    <View
        android:id="@+id/line1"
        style="@style/vertical_line"
        app:layout_constraintTop_toBottomOf="@id/rl1"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1"
        tools:layout_editor_absoluteY="260dp"
        >

        <LinearLayout
            style="@style/login_item_ll"
            android:layout_marginTop="10dp"
            >

            <ImageView
                style="@style/login_iv_style"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_password"/>

            <android.support.design.widget.TextInputLayout
                style="@style/login_til"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white_1"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_login_pwd"
                    style="@style/style_tie_pwd"
                    android:hint="@string/input_pwd"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <View
            style="@style/vertical_line"/>

        <LinearLayout
            style="@style/login_item_ll"
            android:layout_marginTop="20dp"
            >

            <ImageView
                style="@style/login_iv_style"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_password"/>

            <android.support.design.widget.TextInputLayout
                style="@style/login_til"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white_1"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_login_new_pwd"
                    style="@style/style_tie_pwd"
                    android:hint="@string/input_new_pwd"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <View
            style="@style/vertical_line"/>

        <LinearLayout
            style="@style/login_item_ll"
            android:layout_marginTop="20dp"
            >

            <ImageView
                style="@style/login_iv_style"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_password"/>

            <android.support.design.widget.TextInputLayout
                style="@style/login_til"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white_1"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_login_new_pwd_again"
                    style="@style/style_tie_pwd"
                    android:hint="@string/input_new_pwd_again"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <View
            style="@style/vertical_line"/>

        <Button
            android:id="@+id/bt_save_pwd"
            style="@style/bt_default"
            android:layout_marginTop="40dp"
            android:background="@drawable/selector_white_to_gray"
            android:text="@string/confirm"
            android:textColor="@color/black_1"
            />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>