<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/default_bg_style"
    >

    <RelativeLayout
        android:id="@+id/rl1"
        style="@style/top_rl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/bt_return"
            style="@style/top_rl_bt"/>

        <TextView
            android:id="@+id/title_name"
            style="@style/top_rl_tv"
            android:text="@string/register"
            />
    </RelativeLayout>

    <View
        android:id="@+id/line1"
        style="@style/vertical_line"
        app:layout_constraintTop_toBottomOf="@id/rl1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/line1"
        >

        <LinearLayout
            android:id="@+id/ll_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                style="@style/login_ll_style"
                >

                <ImageView
                    style="@style/icon_style"
                    android:src="@drawable/vector_drawable_email"/>

                <android.support.design.widget.TextInputLayout
                    style="@style/style_til">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_account_email"
                        style="@style/style_tie"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <View
                style="@style/vertical_line"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                style="@style/login_ll_style"
                >

                <ImageView
                    style="@style/icon_style"
                    android:src="@drawable/vector_drawable_phone"/>

                <android.support.design.widget.TextInputLayout
                    style="@style/style_til">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_account_phone"
                        style="@style/style_tie"
                        android:hint="@string/phone_num"
                        android:inputType="phone"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <View
                style="@style/vertical_line"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_verify_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                style="@style/login_ll_style"
                >

                <ImageView
                    style="@style/icon_style"
                    android:src="@drawable/vector_drawable_verify_code"
                    />

                <android.support.design.widget.TextInputLayout
                    style="@style/style_til"
                    android:layout_width="140dp"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_code"
                        style="@style/style_tie"
                        android:hint="@string/verify_code"
                        android:inputType="number"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/bt_get_code"
                    style="@style/Default_font_size_18"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|center_horizontal"
                    android:paddingBottom="4dp"
                    android:text="@string/get_verify_code"
                    android:textColor="@color/white_1"
                    />
            </LinearLayout>

            <View
                style="@style/vertical_line"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                style="@style/login_ll_style"
                >

                <ImageView
                    style="@style/icon_style"
                    android:src="@drawable/vector_drawable_pwd"
                    />

                <android.support.design.widget.TextInputLayout
                    style="@style/style_til">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_pwd"
                        style="@style/style_tie_pwd"
                        android:hint="@string/pwd_hint"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <View
                style="@style/vertical_line"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/bt_switch_login_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:padding="6dp"
                android:text="@string/phone_register"
                android:textColor="@color/blue_3"
                />
        </RelativeLayout>

        <Button
            android:id="@+id/bt_register"
            style="@style/bt_default"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_black_to_gray"
            android:text="@string/register"
            />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>